--- a/hello_app/templates/home.html
+++ b/hello_app/templates/home.html
@@ -3,5 +3,5 @@
 Home
 {% endblock %}
 {% block content %}
-<p>Home page for the Visual Studio Code Flask tutorial.</p>
+<p>Home page for Fusion Practices Flask tutorial v 2.0</p>
 {% endblock %}
