--- a/hello_app/templates/about.html
+++ b/hello_app/templates/about.html
@@ -3,5 +3,5 @@
 About us
 {% endblock %}
 {% block content %}
-<p>About page for Fusion Practices Flask tutorial.</p>
+<p>About page for Fusion Practices Flask tutorial 2.0.</p>
 {% endblock %}
