--- a/hello_app/templates/contact.html
+++ b/hello_app/templates/contact.html
@@ -3,5 +3,5 @@
 Contact us
 {% endblock %}
 {% block content %}
-<p>Contact page for the Visual Studio Code Flask tutorial...</p>
+<p>Contact page for the Visual Studio Code Flask tutorial 2.0</p>
 {% endblock %}
