modified home.html on test branch

--- a/hello_app/templates/home.html
+++ b/hello_app/templates/home.html
@@ -3,5 +3,5 @@
 Home
 {% endblock %}
 {% block content %}
-<p>Home page for Fusion Practices Flask tutorial v 2.0</p>
+<p>Home page for Fusion Practices Flask tutorial v 3.0 by merging test branch</p>
 {% endblock %}
